fix(banner): fix section width overflow

--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -8,7 +8,7 @@
 section.mainBanner {
     position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .mainBanner > div > .slick-list, .mainBanner > .slick-slider {
